# FreeKill

./: .clangd  .gitignore  .gitmodules  .luarc.json  2.c  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.OSX  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FreeKill.kdev4  PKGBUILD  README.md  ban.patch  deploycore.sh  en_US.qm  flake.nix  freekill.desktop  freekill.server.config.json.example  genfkver.sh  mkfksource.sh  sgs  test.lua  test.qml  waiting_tips.txt
.github/workflows/: build-android-arm32.yml  build-android.yml  build-windows.yml  changelog.yml  check-white-space.yml  docker-server.yml  run-test.yml  sphinx.yml
Fk/: Config.qml  Logic.js  Splash.qml  Toast.qml  ToastManager.qml  Tutorial.qml  main.qml  qmldir  skin-bank.js  ul_log.txt  util.js
Fk/Base/: AppUtil.qml  Config.qml  CppUtil.qml  DatabaseUtil.qml  FileSystemUtil.qml  Logic.js  LuaUtil.qml  Mediator.qml  RootPage.qml  SkinBank.qml  Splash.qml  Toast.qml  ToastManager.qml  Util.qml  command.mjs  qmldir
Fk/ChatAnim/: Egg.qml  Flower.qml  GiantEgg.qml  Shoe.qml  Wine.qml  qmldir
Fk/Cheat/: CardDetail.qml  FreeAssign.qml  GeneralDetail.qml  PlayerDetail.qml  SameConvert.qml  qmldir
Fk/Common/: Avatar.qml  AvatarChatBox.qml  ChatBox.qml  LogEdit.qml  qmldir
Fk/LobbyElement/: AudioSetting.qml  BGSetting.qml  BanGeneralSetting.qml  ControlSetting.qml  CreateRoom.qml  EditProfile.qml  FilterRoom.qml  PersonalSettings.qml  RoomDelegate.qml  RoomGeneralSettings.qml  RoomPackageSettings.qml  UserInfo.qml  qmldir
Fk/ModMaker/: CreateSomething.qml  ModConfig.qml  ModDetail.qml  ModInit.qml  UserInfo.qml  main.qml  qmldir
Fk/Pages/: About.qml  CardsOverview.qml  Danmaku.qml  GeneralDetailPage.qml  GeneralFilter.qml  GeneralPoolOverview.qml  GeneralsOverview.qml  Init.qml  JoinServer.qml  Lobby.qml  Logic.js  MetroButton.qml  MetroToggleButton.qml  ModMaker.qml  ModesOverview.qml  PackageDownload.qml  PackageManage.qml  Replay.qml  ResourcePackManage.qml  Room.qml  RoomLogic.js  TileButton.qml  qmldir
Fk/PhotoElement/: DelayedTrickArea.qml  EquipArea.qml  EquipItem.qml  HpBar.qml  LimitSkillArea.qml  LimitSkillItem.qml  Magatama.qml  MarkArea.qml  PicMarkArea.qml  RoleComboBox.qml  Shield.qml  qmldir
Fk/ReplayElement/: GameDataOverview.qml  ReplayRecordingFile.qml  StatisticsOverview.qml  qmldir
Fk/RoomElement/: AG.qml  ArrangeCardsBox.qml  BigGlowText.qml  CardArea.qml  CardItem.qml  CheckBox.qml  ChoiceBox.qml  ChooseCardsAndChoiceBox.qml  ChooseGeneralBox.qml  ChooseHandcard.qml  Dashboard.qml  DetailedCheckBox.qml  DetailedChoiceBox.qml  GameOverBox.qml  GeneralCardItem.qml  GlowText.qml  GuanxingBox.qml  HandcardArea.qml  IndicatorLine.qml  InvisibleCardArea.qml  MiscStatus.qml  MoveCardInBoardBox.qml  Photo.qml  PixmapAnimation.qml  PlayerCardBox.qml  PoxiBox.qml  SkillArea.qml  SkillButton.qml  SkillInvokeAnimation.qml  TablePile.qml  TestDialog.qml  UltSkillAnimation.qml  ViewGeneralPile.qml  ViewPile.qml  YuqiBox.qml  qmldir
Fk/SkillInteraction/: SkillCardName.qml  SkillCombo.qml  SkillSpin.qml  qmldir
Fk/Widgets/: ActionRow.qml  ButtonContent.qml  ButtonRow.qml  ComboRow.qml  CommonScrollBar.qml  EntryRow.qml  PageBase.qml  PopupLoader.qml  PreferenceGroup.qml  README.md  (+9 more)
android/: .gitignore  AndroidManifest.xml  copy_assets.sh
client/: init.sql
doc/: index.md  index.rst
docker/: Dockerfile  docker-entrypoint.sh
docs/: Doxyfile  conf.py  index.rst  makebook.sh  requirements.txt
image/: icon.rc
lang/: en_US.ts  vi_VN.ts  zh_CN.ts
lua/: fk_ex.lua  freekill.lua  ui-util.lua  util.lua
qml/: Config.qml  Logic.js  Splash.qml  Toast.qml  ToastManager.qml  main.qml  util.js
server/: gamedb_init.sql  init.sql
src/: CMakeLists.txt  applink.c  freekill.cpp  freekill.h  main.cpp  pch.h
src/client/: client.cpp  client.h  clientplayer.cpp  clientplayer.h  replayer.cpp  replayer.h
src/core/: c-wrapper.cpp  c-wrapper.h  diy.cpp  diy.h  global.cpp  global.h  jsonrpc.cpp  jsonrpc.h  packman.cpp  packman.h  parser.cpp  parser.h  player.cpp  player.h  rpc-lua.cpp  rpc-lua.h  util.cpp  util.h
src/network/: client_socket.cpp  client_socket.h  router.cpp  router.h  server_socket.cpp  server_socket.h
src/server/: auth.cpp  auth.h  gamelogic.cpp  gamelogic.h  lobby.cpp  lobby.h  room.cpp  room.h  roombase.cpp  roombase.h  roomthread-rpc.cpp  roomthread-rpc.h  roomthread.cpp  roomthread.h  scheduler.cpp  scheduler.h  server.cpp  server.h  serverplayer.cpp  serverplayer.h  shell.cpp  shell.h
src/server/cli/: shell.cpp
src/server/gamelogic/: roomthread.cpp  roomthread.h  roomthread_manager.cpp  roomthread_manager.h  rpc-dispatchers.cpp  rpc-dispatchers.h
src/server/room/: lobby.cpp  lobby.h  lobby_lua_task.cpp  lobby_lua_task.h  room.cpp  room.h  room_manager.cpp  room_manager.h  roombase.cpp  roombase.h
src/server/rpc-lua/: jsonrpc.cpp  jsonrpc.h  rpc-lua.cpp  rpc-lua.h
src/server/task/: task.cpp  task.h  task_manager.cpp  task_manager.h
src/server/user/: auth.cpp  auth.h  serverplayer.cpp  serverplayer.h  user_manager.cpp  user_manager.h
src/swig/: client.i  freekill-nogui.i  freekill-wasm.i  freekill.i  naturalvar.i  player.i  qml-nogui.i  qt.i  server.i  sqlite3.i
src/swig/qrandom/: Makefile  README.md  freekill-qrandomgen.cpp
src/ui/: mod.cpp  mod.h  qmlbackend.cpp  qmlbackend.h
test/: CMakeLists.txt  lua_core_test.cpp  lua_room_test.cpp  lua_skill_test.cpp  lua_test.cpp  main.cpp  pch.h  test.cpp
test/core/: test_lua.cpp
test/lua/: cpp_run.lua  cpp_run_gamelogic.lua  cpp_run_skill.lua  pattern.lua  play.lua  run.lua  testmode.lua
test/lua/core/: card.lua  engine.lua  init.lua  pattern.lua  testmode.lua  util.lua
test/lua/lib/: fake_backend.lua  fk.lua  luaunit.lua  room.lua  serverplayer.lua  ui.lua
test/lua/server/: gameevent.lua  gamelogic.lua  logic.lua  scheduler.lua
test/network/: test_socket.cpp  test_socket.h
test/server/: globals.cpp  globals.h  ltest_logic.cpp  server_thread.cpp  server_thread.h  test_create_room.cpp  test_create_room.h  test_login.cpp  test_login.h  test_lua.cpp  test_scheduler.cpp  test_scheduler.h  test_server.cpp
wasm/: nginx.conf
(+1043 files in other folders)
